fix: format space characters using style 'pre-wrap' in <ndb-documentation>.
Allows to wrap text within paragraph and render all space characters. Remove formatting of ' ' to '&nbsp;'.

--- a/src/styles/app/_documentation.scss
+++ b/src/styles/app/_documentation.scss
@@ -1,6 +1,7 @@
 @mixin documentation-theme($theme) {
   ndb-documentation {
     & p {
+      white-space: pre-wrap;
       background-color: rgba(0, 0, 0, 0.05);
 
       & a:hover {
